add all the javadoc and boss health.